# monte-carlo-denoiser

./: .codacy.yaml  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_old  README.md  cmake_install.cmake
cpp/: CMakeLists.txt  gprof.data  gprof_with_getters.data
cpp/src/: camera.cc  camera.h  light.cc  lightSphere.cc  lightSphere.h  material.cc  material.h  mcr.cc  mcr.h  ray.cc  ray.h  shape.cc  shape.h  triangle.cc
cpp/test/: tests.cc
cuda/: CMakeLists.txt  CMakeLists_particles.txt  aliased.ppm  cuda-mcr.cbp  pre_alias.ppm  smaller_15_bounces.ppm  test1.ppm  test2.ppm  test3.ppm  test_unlimited_bounces.ppm
cuda/saved_images/: 256_BY_256_2XALIAS_256PP_2DEPTH.ppm
cuda/src/: \  camera.cc  camera.h  light.cc  light.cu  light.h  lightSphere.cc  lightSphere.cu  lightSphere.h  material.h  mcr.cu  mcr.h  objectImporter.cc  objectImporter.h  ray.cu  ray.cuh  ray.h  shape.cc  shape.h  sphere.cu  sphere.h  triangle.cu  triangle.h  util.cc  util.cu  util.h
cuda2/: CMakeLists.txt  render.ppm
cuda2/src/: light.cu  lightSphere.h  material.cc  mcr.cu  mcr.h
cuda2/src/constants/: colours.h  screen.h
denoiser/: config.py  data.py  denoise_full_image.py  denoise_image.py  denoiser.py  discriminator.py  gan.py  hyperparameters.py  makePatches.py  make_patches.py  model.h5  new_data.py  train_denoiser.py  weighted_average.py
denoiser/code/: callbacks.py  config.py  data.py  denoise_all_test_scenes.sh  denoise_full_img_at_once.py  denoise_image.py  denoiser.py  discriminator.py  eval_util.py  exr.py  gan.py  make_my_rendered_images.py  metrics_module.py  models.py  python_weighted_average.py  quant_eval.py  save_buffers.py  train_denoiser.py  train_util.py  tungsten_data.py  tungsten_eval.py  tungsten_eval_full.py  view_render.py  weighted_average.py
denoiser/custom_ops/: compile.sh  test.py  weighted_average.cc
denoiser/docker/: Dockerfile  docker-run.sh  docker-stop-and-remove.sh
denoiser/experiments/: patches.txt
denoiser/logs/: events.out.tfevents.1551464450.bc3d63820dd5  events.out.tfevents.1551564023.c7d5f9ddbff0  events.out.tfevents.1551884078.ba9f3d101c74  events.out.tfevents.1551900790.ba9f3d101c74
denoiser/scripts/: clear_patches.sh  convert_images.sh  go_interactive.sh
denoiser/tempmodels/: 100ep-zero-cent  20ep-zero-cent  90ep-zero-cent
notebooks/: KL_JS.ipynb  nash-equilibrium.ipynb  wgan.ipynb
src/: camera.cc  light.cc  light.h  mcr.cc  mcr.h  ray.cc  ray.h  sdl_window_helper.cc  sdl_window_helper.h  shape.h  triangle.cc  triangle.h
src/constants/: colours.h  screen.h  (+1 more)
test/: tests.cc
tungsten_docker/: Dockerfile  LICENSE.txt  README.md  render_all.sh  tungsten.py
(+2085 files in other folders)
